# array-format

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
benches/: read_chunks.rs  read_file.rs  read_parallel.rs
examples/: 01_basic.rs  02_chunked_partial_write.rs  03_fill_values.rs  04_vlen_strings.rs  05_attributes.rs  06_layers_and_compact.rs  07_on_disk.rs  08_statistics.rs  09_shared_cache.rs  10_file_metadata.rs  profile_parallel.rs
src/: address.rs  array.rs  block.rs  cache.rs  codec.rs  compact.rs  dtype.rs  error.rs  file.rs  footer.rs  layout.rs  lib.rs  ndarray_ext.rs  reader.rs  stats.rs  storage.rs  timestamp.rs  writer.rs
src/delta/: allocator.rs  cache.rs  immutable.rs  mod.rs  mutable.rs
tests/: roundtrip.rs
