[package]
name = "array-format"
version = "0.1.0"
edition = "2024"

[dependencies]
rkyv = { version = "0.8", features = ["bytecheck"] }
moka = { version = "0.12", features = ["future"] }
object_store = "0.13"
bytes = "1"
futures = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }
zstd = "0.13"
lz4_flex = "0.11"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.9"
tempfile = "3"
object_store = "0.13"
crossbeam-queue = "0.3"

[[bench]]
name = "read_chunks"
harness = false

[[bench]]
name = "read_file"
harness = false

[[bench]]
name = "read_parallel"
harness = false
