[package]
name = "array-format"
version = "0.12.0"
edition = "2024"
rust-version = "1.85"
description = "A block-backed, footer-indexed container for storing multiple n-dimensional arrays in a single file, with a delta/overlay architecture and pluggable compression and storage backends."
documentation = "https://docs.rs/array-format"
homepage = "https://github.com/robinskil/array-format"
repository = "https://github.com/robinskil/array-format"
readme = "README.md"
license = "Apache-2.0"
keywords = ["array", "ndarray", "tensor", "storage", "compression"]
categories = ["data-structures", "encoding", "filesystem"]
exclude = ["/target", "/.github", "/benches"]

[dependencies]
rkyv = { version = "0.8", features = ["bytecheck", "pointer_width_64"] }
moka = { version = "0.12", features = ["future"] }
object_store = "0.13"
bytes = "1"
futures = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "fs", "io-util"] }
zstd = "0.13"
lz4_flex = "0.11"
ndarray = "0.17"
tempfile = "3"
indexmap = "2"
zerocopy = { version = "0.8", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.9"

[[bench]]
name = "read_chunks"
harness = false

[[bench]]
name = "read_file"
harness = false

[[bench]]
name = "read_parallel"
harness = false

[profile.release]
debug = true